task14/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-app-ingress
  namespace: exam-farrukh
spec:
  ingressClassName: nginx
  rules:
  - host: mid-term-f-sadatov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: my-app
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
